Start dispatching events to QQuickWindow virtual functions again

Users sometimes override those.

Amends 68c103225f4e8bd6c1b18ef547108fd60f398c0f : we no longer bypass
the "big switch" in QWindow::event() completely, but let it dispatch
pointer events to any of the window virtual functions that may have been
overridden, while using a guard to prevent them from calling back to
QQuickWindow::event().

Fixes: QTBUG-97859
Change-Id: I2bb5258db9682a82a804fa5deca9eb8477cb38cc
Reviewed-by: Volker Hilsheimer <volker.hilsheimer@qt.io>
(cherry picked from commit 13a0da5bd2cf59aeb343fe9345b9bac2cfbb5e6f)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>